tests/behavior/success/is_comptime.bz
function main()
{
	if (__builtin_is_comptime()) unreachable;
}
