tests/behavior/error/panic2.bz
function main()
{
	__builtin_panic(str());
}
